--- a/Week01/Day01/apiConnection.ipynb
+++ b/Week01/Day01/apiConnection.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,21 +897,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_notion_page_data(page_url, notion_api_key):\n",
-    "    \"\"\"\n",
-    "    Fetches data from a Notion page and returns it as JSON.\n",
-    "    \n",
-    "    Args:\n",
-    "        page_url (str): The URL of the Notion page\n",
-    "        notion_api_key (str): Your Notion API key\n",
-    "        \n",
-    "    Returns:\n",
-    "        dict: JSON data from the Notion page\n",
-    "    \"\"\"\n",
     "    # Extract page ID from URL\n",
     "    page_id = page_url.split('-')[-1]\n",
     "    \n",
@@ -1045,22 +1035,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error fetching Notion page: 400 Client Error: Bad Request for url: https://api.notion.com/v1/blocks/1dd9a3a6132180b6bccfc7cfa39bd39b?pvs=4/children\n",
-      "Failed to fetch Notion page data.\n"
+      "Error fetching Notion page: 400 Client Error: Bad Request for url: https://api.notion.com/v1/blocks/1dd9a3a6132180b6bccfc7cfa39bd39b?pvs=4/children\n"
      ]
     }
    ],
    "source": [
     "notion_url = \"https://www.notion.so/Machine-Learning-Notes-1dd9a3a6132180b6bccfc7cfa39bd39b?pvs=4\"\n",
     "notion_api_key = notion_token\n",
-    "chat_with_notion_content(notion_url, notion_api_key)"
+    "get_notion_page_data(notion_url, notion_api_key)"
    ]
   },
   {
