--- a/Week02/day04_AirlineAIAssistant.ipynb
+++ b/Week02/day04_AirlineAIAssistant.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7864\n",
-      "* Running on public URL: https://cea988592e0df1c2fb.gradio.live\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on public URL: https://06b7222e7773d93f69.gradio.live\n",
       "\n",
       "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://cea988592e0df1c2fb.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://06b7222e7773d93f69.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -123,6 +123,178 @@
    ],
    "source": [
     "view = gr.ChatInterface(fn=chat).launch(share=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tools "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a simple function to find the price for the ticket \n",
+    "ticket_price = {'london': \"$799\", 'paris': \"$899\", 'berlin': \"$599\"}\n",
+    "\n",
+    "def get_ticket_price(destination_city):\n",
+    "    print(f\"Tool get_ticket_price called for {destination_city}\")\n",
+    "    city = destination_city.lower()\n",
+    "    return ticket_price.get(city, 'Unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool get_ticket_price called for BERLIN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'$599'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_ticket_price('BERLIN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we will create a tool, but follows some particular structure\n",
+    "price_fuction = {\n",
+    "    \"name\": \"get_ticket_price\",\n",
+    "    \"description\": \"Get the price for the return ticket to the destination city. Call this whenever you need to know the ticket price, for example: when customers ask 'how much is a ticket to this city'\",\n",
+    "    \"parameters\": {\n",
+    "        \"type\": \"object\",\n",
+    "        \"properties\": {\n",
+    "            \"destination_city\": {\n",
+    "                \"type\": \"string\",\n",
+    "                \"description\": \"The city that the customer wants to travel to\",\n",
+    "            },\n",
+    "        },\n",
+    "        \"required\": ['destination_city'],\n",
+    "        \"additionalProperties\": False\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tools = [{\"type\": \"function\", 'function': price_fuction}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Getting OpenAI to use our tool\n",
+    "# There's some fiddly stuff to allow OpenAI \"to call our tool\"\n",
+    "# What we actually do is give the LLM the opportunity  to inform us that it wants us to run the tool.\n",
+    "# Here's how the new chat function looks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We have to write that function handle_tool_call:\n",
+    "\n",
+    "def handle_tool_call(message):\n",
+    "    tool_call = message.tool_calls[0]\n",
+    "    arguments = json.loads(tool_call.function.arguments)\n",
+    "    city = arguments.get('destination_city')\n",
+    "    price = get_ticket_price(city)\n",
+    "    response = {\n",
+    "        \"role\": \"tool\",\n",
+    "        \"content\": json.dumps({\"destination_city\": city,\"price\": price}),\n",
+    "        \"tool_call_id\": tool_call.id\n",
+    "    }\n",
+    "    return response, city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chat(message, history):\n",
+    "    messages = [{'role':'system', 'content':sys_prompt}]\n",
+    "    for human, assistant in history:\n",
+    "        message."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7864\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool get_ticket_price called for berlin\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
